dataserver/k8s/deepstream-pusher.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: "deepstream-pusher"
  labels:
    app: deepstream-pusher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepstream-pusher
  template:
    metadata:
      labels:
        app: deepstream-pusher
    spec:
      containers:
        - name: deepstream-pusher
          image: gcr.io/flight-globe/deepstream-pusher
          imagePullPolicy: Always
          ports:
            - containerPort: 6020
