dataserver/k8s/deepstream-server.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: "deepstream-server"
  labels:
    app: deepstream-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepstream-server
  template:
    metadata:
      labels:
        app: deepstream-server
    spec:
      containers:
        - name: deepstream-server
          image: gcr.io/flight-globe/deepstream-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
