dataserver/k8s/fg-redis-persistor.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
   name: "fg-redis-persistor"
   labels:
      app: redis-point-persistor
spec:
   replicas: 1
   selector:
      matchLabels:
         app: redis-point-persistor
   template:
      metadata:
         labels:
            app: redis-point-persistor
      spec:
         containers:
            - name: fg-redis-persistor
              image: gcr.io/flight-globe/fg-redis-persistor
              imagePullPolicy: Always
