dataserver/k8s/fg-server.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: "fg-server"
  labels:
    app: fg-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fg-server
  template:
    metadata:
      labels:
        app: fg-server
    spec:
      containers:
      - name: fg-server
        image: gcr.io/flight-globe/fg-server
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
