dataserver/k8s/fr-collector.yaml
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "fr-collector-deployment"
  labels:
    app: "fr-collector"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "fr-collector"
  template:
    metadata:
      labels:
        app: "fr-collector"
    spec:
      containers:
      - name: "fr-collector"
        image: gcr.io/flight-globe/fr-collector
        imagePullPolicy: Always
