dataserver/k8s/fr-db-persistor.yaml
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "fr-db-persistor"
  labels:
    app: fr-db-persistor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fr-db-persistor
  template:
    metadata:
      labels:
        app: fr-db-persistor
    spec:
      containers:
      - name: fr-db-persistor
        image: gcr.io/flight-globe/fr-db-persistor
        imagePullPolicy: Always
