dataserver/k8s/deepstream-server-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: deepstream-server-service-external
spec:
  type: LoadBalancer
  selector:
    app: deepstream-server
  ports:
    - protocol: TCP
      port: 6020
