dataserver/k8s/fg-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fg-server
  labels:
    app: "fg-server"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8081
      name: http
  selector:
    app: fg-server
---
