dataserver/k8s/rest-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  tls:
    - hosts:
        - data.flight.earth
      secretName: flightglobe-cert-prod
  rules:
    - host: data.flight.earth
      http:
        paths:
          - path: /
            backend:
              serviceName: rest-server
              servicePort: 8080
